# fitness-mcp-servers

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: security-review-2026-02-25.md
docs/plans/: 2026-02-20-mcp-garmin-design.md  2026-02-20-mcp-garmin-implementation.md  2026-02-25-mcp-myfitnesspal-design.md  2026-02-25-mcp-myfitnesspal-implementation.md
docs/superpowers/plans/: 2026-03-17-new-garmin-tools.md
docs/superpowers/specs/: 2026-03-17-new-garmin-tools-design.md
mcp-garmin/: README.md  pyproject.toml
mcp-garmin/scripts/: login.py
mcp-garmin/src/mcp_garmin/: client.py  server.py  validation.py
mcp-garmin/src/mcp_garmin/tools/: __init__.py  _shared.py  activities.py  body.py  daily.py  goals.py  health.py  wellness.py
mcp-garmin/tests/integration/: test_integration.py
mcp-garmin/tests/unit/: test_client.py  test_server.py  test_validation.py
mcp-garmin/tests/unit/tools/: test_activities.py  test_aggregator.py  test_body.py  test_daily.py  test_goals.py  test_health.py  test_wellness.py
mcp-myfitnesspal/: README.md  pyproject.toml
mcp-myfitnesspal/scripts/: login.py
mcp-myfitnesspal/src/mcp_myfitnesspal/: client.py  exceptions.py  server.py  validation.py
mcp-myfitnesspal/src/mcp_myfitnesspal/tools/: __init__.py  body.py  nutrition.py
mcp-myfitnesspal/tests/unit/: test_client.py  test_exceptions.py  test_validation.py
mcp-myfitnesspal/tests/unit/tools/: test_aggregator.py  test_body.py  test_nutrition.py
